Cleaning overcomplicated date displays

--- a/templates/article/find_article.html
+++ b/templates/article/find_article.html
@@ -40,9 +40,7 @@
                     </div>
                 </td>
                 <td>
-                    {% with date=article.pubdate|naturaltime %}
-                        {{ date }}
-                    {% endwith %}
+                    {{ article.pubdate|naturaltime }}
                 </td>
                 <td>
                     {{ article.text|truncatechars:200|emarkdown }}
