--- a/templates/mp/index.html
+++ b/templates/mp/index.html
@@ -69,9 +69,7 @@
                         {% if answer %}
                             Dernière rép.
                             <a href="{{ answer.get_absolute_url }}" class="hide-for-small">
-                                {% with date=answer.pubdate|naturaltime %}
-                                    {{ date }}
-                                {% endwith %}
+                                {{ date=answer.pubdate|naturaltime }}
                             </a>
                             </br>
                             par
