--- a/templates/forum/forums_common.part.html
+++ b/templates/forum/forums_common.part.html
@@ -26,9 +26,7 @@
             {% with last_message=forum.get_last_message %}
                 {% if last_message %}
                     <a href="{{ last_message.get_absolute_url }}">
-                        {% with date=last_message.pubdate|naturaltime %}
-                            {{ date|capfirst }}
-                        {% endwith %}
+                        {{ last_message.pubdate|naturaltime|capfirst }}
                     </a>
                     par
                     {% with member=last_message.author %}
