integrate js editor

--- a/assets/scss/zds.scss
+++ b/assets/scss/zds.scss
@@ -4,6 +4,7 @@
 @import "header";
 @import "custom";
 @import "fonts";
+@import "editor";
 @import "foundation-icons";
 
 // Or selectively include components
