Bonnes infos de titre dans la page de l'asso

--- a/templates/pages/association.html
+++ b/templates/pages/association.html
@@ -1,11 +1,11 @@
 {% extends "pages/base.html" %}
 
 {% block title %}
-    Pages
+    L'association Zeste de Savoir
 {% endblock %}
 
 {% block breadcrumb %}
-    <li class="current"><a href="#">Index</a></li>
+    <li class="current"><a href="#">L'association Zeste de Savoir</a></li>
 {% endblock %}
 
 {% block headline %}
