--- a/templates/member/base_read.html
+++ b/templates/member/base_read.html
@@ -1,11 +1,158 @@
 {% extends "member/base.html" %}
 
-{% block headline %}
-    <h2 class="box head-content">
-        {% block head-image %}{% endblock %}
-        {% block head-title %}{% endblock %}
-    </h2>
-    <ul class="taglist">
-        {% block head-tag %}{% endblock %}
-    </ul>
+{% block headline %}{% endblock %}
+
+{% block sidebar %}
+    <h3>Activités</h3>
+    <ul>
+    <li>
+    	<h4>Articles</h4>
+    	<li>
+    		En cours de rédaction<span class="label right secondary">2</span>
+		</li>
+		<li>
+    		En attente de validation<span class="label right secondary">2</span>
+		</li>
+		<li>
+    		En ligne<span class="label right secondary">2</span>
+		</li>
+		<li>
+    		Total<span class="label right">{{ profile.get_tutos.count }}</span>
+		</li>
+	</li>
+	<li>
+    	<h4>Tutoriels</h4>
+    	<li>
+    		En cours de rédaction<span class="label right secondary">{{ profile.get_draft_tutos.count }}</span>
+		</li>
+		<li>
+    		En cours de validation<span class="label right secondary">{{ profile.get_validate_tutos.count }}</span>
+		</li>
+		<li>
+    		En version beta<span class="label right secondary"><a href="{% url "zds.tutorial.views.find_tuto" usr.pk %}?type=beta">{{ profile.get_beta_tutos.count }}</a></span>
+		</li>
+		<li>
+    		En ligne<span class="label right secondary"><a href="{% url "zds.tutorial.views.find_tuto" usr.pk %}">{{ profile.get_public_tutos.count }}</a></span>
+		</li>
+		<li>
+    		Total<span class="label right">{{ profile.get_tutos.count }}</span>
+		</li>
+    </li>
+	<li>
+    	<h4>Forums</h4>
+    	<li>
+    		Sujets créés<span class="label right secondary"><a href="{% url "zds.forum.views.find_topic" usr.pk %}">{{ profile.get_topic_count }}</a></span>
+		</li>
+		<li>
+    		Messages postés<span class="label right secondary"><a href="{% url "zds.forum.views.find_post" usr.pk %}">{{ profile.get_post_count }}</a></span>
+		</li>
+    </li>
+	</ul>
+	{% if perms.forum.change_topic %}
+	<h3>Modération</h3>
+	<ul>
+    <li>
+    	<h4>Statistiques</h4>
+    	<li>
+    		Nombres de messages modérés<span class="label right secondary">{{ profile.get_invisible_posts_count }}</span>
+		</li>
+		<li>
+    		Nombres d'alertes déclarées<span class="label right secondary">{{ profile.get_alerts_posts_count }}</span>
+		</li>
+	</li>
+	<li>
+    	<h4>Sanctions</h4>
+        	{% if profile.can_write_now %}
+        		<li>
+					<a href="#" data-dropdown="ls-drop-{{profile.pk}}">Lecture seule</a>
+            	</li>
+                <div id="ls-drop-{{profile.pk}}" class="f-dropdown tiny content" data-dropdown-content>
+                    <p>
+                        Pour quelle raison souhaitez vous mettre ce membre en lecture seule ?
+                    </p>
+                    <input type="text" name="ls-text" class="expand" placeholder="Spam, Troll, etc." />
+                    <button type="submit" name="ls" class="button expand alert tiny">
+                        Confirmer la sanction
+                    </button>
+                </div>
+                <li>
+                <a href="#" data-dropdown="ls-temp-drop-{{profile.pk}}">
+                    LS Temporaire
+                </a>
+            	</li>
+                <div id="ls-temp-drop-{{profile.pk}}" class="f-dropdown tiny content" data-dropdown-content>
+                    <p>
+                        Pour quelle raison souhaitez vous mettre ce membre en lecture seule ?
+                    </p>
+                    <input type="text" name="ls-temp-text" class="expand" placeholder="Spam, Troll, etc." />
+                    <input type="text" name="ls-jrs" class="expand" placeholder="Nombre de jours de la sanction" />
+                    <button type="submit" name="ls-temp" class="button expand alert tiny">
+                        Confirmer la sanction
+                    </button>
+                </div>
+                {% else %}
+                <li>
+                <a href="#" data-dropdown="unls-drop-{{profile.pk}}">
+                    Oter la LS
+                </a>
+                </li>
+                <div id="unls-drop-{{profile.pk}}" class="f-dropdown tiny content" data-dropdown-content>
+                    <p>
+                        Pour quelle raison souhaitez vous lever la sanction de ce membre ?
+                    </p>
+                    <input type="text" name="unls-text" class="expand" placeholder="Bonne actions ?" />
+                    <button type="submit" name="un-ls" class="button expand alert tiny">
+                        Confirmer la libération
+                    </button>
+                </div>
+                {% endif %}
+                {% if profile.can_read_now %}
+                <li>
+                <a href="#" data-dropdown="ban-temp-drop-{{profile.pk}}">
+                    Ban Temporaire
+                </a>
+                </li>
+                <div id="ban-temp-drop-{{profile.pk}}" class="f-dropdown tiny content" data-dropdown-content>
+                    <p>
+                        Pour quelle raison souhaitez vous bannir ce membre ?
+                    </p>
+                    <input type="text" name="ban-temp-text" class="expand" placeholder="Spam, Troll, etc." />
+                    <input type="text" name="ban-jrs" class="expand" placeholder="Nombre de jours de la sanction" />
+                    <button type="submit" name="ban-temp" class="button expand alert tiny">
+                        Confirmer la sanction
+                    </button>
+                </div>
+                <li>
+                <a href="#" data-dropdown="ban-drop-{{profile.pk}}">
+                    Ban Définitif
+                </a>
+                </li>
+                <div id="ban-drop-{{profile.pk}}" class="f-dropdown tiny content" data-dropdown-content>
+                    <p>
+                        Pour quelle raison souhaitez vous bannir ce membre ?
+                    </p>
+                    <input type="text" name="ban-text" class="expand" placeholder="Spam, Troll, etc." />
+                    <button type="submit" name="ban" class="button expand alert tiny">
+                        Confirmer la sanction
+                    </button>
+                </div>
+                {% else %}
+                <li>
+                <a href="#" data-dropdown="unban-drop-{{profile.pk}}">
+                    Oter le ban
+                </a>
+                </li>
+                <div id="unban-drop-{{profile.pk}}" class="f-dropdown tiny content" data-dropdown-content>
+                    <p>
+                        Pour quelle raison souhaitez vous lever la sanction de ce membre ?
+                    </p>
+                    <input type="text" name="unban-text" class="expand" placeholder="Bonne action ?" />
+                    <button type="submit" name="un-ban" class="button expand alert tiny">
+                        Confirmer la libération
+                    </button>
+                </div>
+            {% endif %}
+    </li>
+	</ul>
+	{% endif %}
 {% endblock %}
