--- a/templates/home.html
+++ b/templates/home.html
@@ -26,14 +26,20 @@ class="active"
     <dl class="accordion" data-accordion>
     {% for category in categories %}
         <dd>
-            <a href="#cat{{ category.pk }}">{{ category.title }}</a>
+            <a href="#cat{{ category.pk }}">{{ category.title }} 
+                <span class="label right">{{category.get_tutos.count}}</span>
+            </a>
+            
             <div id="cat{{ category.pk }}" class="content">
                 <ul>
                     {% for catofsubcat in category.get_subcategories %}
                         <li>
-                            <a href="{{ catofsubcat.subcategory.get_absolute_url_tutorial }}">
+                            <a href="{{ catofsubcat.subcategory.get_absolute_url_tutorial }}" class="left">
                                 {{ catofsubcat.subcategory }}
                             </a>
+                            <span class="label right">
+                                {{catofsubcat.subcategory.get_tutos.count}}
+                            </span>
                         </li>
                     {% endfor %}
                 </ul>
