improve index template

--- a/templates/tutorial/index.html
+++ b/templates/tutorial/index.html
@@ -34,7 +34,7 @@
                 </div>
                 {% if tuto.image %}
                 <div class="large-12 columns crop">
-                    <img src="{{tuto.image.url }}" alt=""/>
+                    <img src="{{tuto.image.thumb.url }}" alt=""/>
                 </div>
                 {% endif %}
             </a>
