--- a/templates/home.html
+++ b/templates/home.html
@@ -12,10 +12,14 @@
     Accueil
 {% endblock %}
 
+
+
 {% block meta %}
-    {# TODO : Mettre une meilleur description #}
+    {# TODO : Make a better description #}
     <meta name="description" content="Bienvenue sur ZesteDeSavoir, une communauté">
 {% endblock %}
+
+
 
 {% block sidebar %}
 <aside class="sidebar accordeon mobile-menu-bloc mobile-menu-hide"
