--- a/templates/article/base.html
+++ b/templates/article/base.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %}
+{% extends "base_content_page.html" %}
+{% load captureas %}
 
 
 
@@ -20,21 +21,46 @@
 
 
 
-{% block content_out %}
-    <article>
-        <header>
-            {% block headline %}{% endblock %}
-        </header>
-        <section class="article-content content-wrapper">
-            {% block content %}{% endblock %}
-        </section>
-    </article>
-{% endblock %}
+{% block sidebar_actions %}
+    {% if user.is_authenticated %}
+        {% captureas sidebarfilter %}{% spaceless %}
+            {% block sidebar_filter %}{% endblock %}
+        {% endspaceless %}{% endcaptureas %}
 
+        {% if sidebarfilter %}
+            <div class="mobile-menu-bloc mobile-all-links" data-title="Filtres">
+                <h3>Filtres</h3>
+                <ul class="sidebar-standalone">
+                    {{ sidebarfilter }}
+                </ul>
+            </div>
+        {% endif %}
+    {% endif %}
 
+    <div class="mobile-menu-block mobile-all-links" data-title="Actions">
+        <h3>Actions</h3>
+        <ul class="sidebar-standalone">
+            <li>
+                <a href="{% url "zds.article.views.new" %}">
+                    Nouvel article
+                </a>
+            </li>
+        </ul>
+    </div>
 
-{% block sidebar %}
-    <aside class="sidebar mobile-menu-hide">
-        {% block sidebar_actions %}{% endblock %}
-    </aside>
+    <div class="mobile-menu-bloc mobile-all-links" data-title="Flux">
+        <h3>Flux</h3>
+        <ul class="sidebar-standalone">
+            <li>
+                <a href="{% url "article-feed-rss" %}">
+                    Nouveaux articles (RSS)
+                </a>
+            </li>
+            <li>
+                <a href="{% url "article-feed-atom" %}">
+                    Nouveaux articles (ATOM)
+                </a>
+            </li>
+        </ul>
+    </div>
 {% endblock %}
