--- a/templates/article/validation/history.html
+++ b/templates/article/validation/history.html
@@ -1,29 +1,36 @@
-{% extends "article/validation.html" %}
+{% extends "article/admin/base.html" %}
 {% load humanize %}
 
+
+
 {% block title %}
-Historique de validation de l'article
+    Historique de validation de l'article
 {% endblock %}
 
-{% block meta %}
-    <meta name="description" content="" />
-{% endblock %}
 
-{% block headline %}
-Historique de validation de l'article
-{% endblock %}
 
 {% block breadcrumb %}
-    <li class="current"><a href="#">Historique</a></li>
+    <li><a href="{% url "zds.article.views.list_validation" %}">Validation</a></li>
+    <li><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></li>
+    <li class="current">Historique</li>
 {% endblock %}
+
+
+
+{% block headline %}
+    <h2>Historique de validation de : {{ article.title }}</h2>
+{% endblock %}
+
+
 
 {% block sidebar_actions %}
+    {% include 'article/includes/sidebar_actions.part.html' %}
 {% endblock %}
 
+
+
 {% block content %}
-<div class="row">
-    <div class="large-12 columns">
-        {% if validations %}
+    {% if validations %}
         <table>
             <thead>
                 <tr>
@@ -38,51 +45,61 @@ Historique de validation de l'article
             </thead>
             <tbody>
                 {% for validation in validations %}
-                <tr>
-                    <td>
-                        <a href="{% url "zds.article.views.view" validation.article.pk validation.article.slug %}?version={{ validation.version }}" >{{ validation.article.title }}</a>
-                    </td>
-                    <td>
-                        {% for subcategory in validation.article.subcategory.all %}
-                        <a href="{% url "zds.article.views.history_validation" article.pk %}?subcategory={{subcategory.pk}}">{{ subcategory.title }}</a><br />
-                        {% endfor %}
-                    </td>
-                    <td>
-                        {% for author in validation.article.authors.all %}
-                        <a href="{% url "zds.member.views.details" user.username %}">{{ author.username }}</a>
-                        {% endfor %}
-                    </td>
-                    <td>
-                        <span>{{ validation.date_proposition|naturaltime }}</span>
-                    </td>
-                    <td>
-                        {% if validation.validator %}
-                        <a href="{% url "zds.member.views.details" validation.validator.username %}">{{ validation.validator.username }}</a>
-                        {% endif %}
-                    </td>
-                    <td>
-                        {% if validation.date_reserve %}
-                        <span>{{ validation.date_reserve|naturaltime }}</span>
-                        {% endif %}
-                    </td>
-                    <td>
-                        {% if validation.is_pending %}
-                        <a href="{% url "zds.article.views.reservation" validation.pk %}">Réservé</a>
-                        {% elif validation.is_pending_valid %}
-                        <a href="{% url "zds.article.views.reservation" validation.pk %}">Se retirer</a>
-                        {% elif validation.is_accept %}
-                        <span>Accepté</span>
-                        {% elif validation.is_reject %}
-                        <span>Rejeté</span>
-                        {% endif %}
-                    </td>
-                </tr>
+                    <tr>
+                        <td>
+                            <a href="{% url "zds.article.views.view" validation.article.pk validation.article.slug %}?version={{ validation.version }}" >{{ validation.article.title }}</a>
+                        </td>
+                        <td>
+                            {% for subcategory in validation.article.subcategory.all %}
+                                <a href="{% url "zds.article.views.history_validation" article.pk %}?subcategory={{subcategory.pk}}">
+                                    {{ subcategory.title }}
+                                </a>
+                            {% endfor %}
+                        </td>
+                        <td>
+                            {% for author in validation.article.authors.all %}
+                                <a href="{% url "zds.member.views.details" user.username %}">
+                                    {{ author.username }}
+                                </a>
+                            {% endfor %}
+                        </td>
+                        <td>
+                            <span>{{ validation.date_proposition|naturaltime }}</span>
+                        </td>
+                        <td>
+                            {% if validation.validator %}
+                                <a href="{% url "zds.member.views.details" validation.validator.username %}">
+                                    {{ validation.validator.username }}
+                                </a>
+                            {% endif %}
+                        </td>
+                        <td>
+                            {% if validation.date_reserve %}
+                                <span>{{ validation.date_reserve|naturaltime }}</span>
+                            {% endif %}
+                        </td>
+                        <td>
+                            {% if validation.is_pending %}
+                                <a href="{% url "zds.article.views.reservation" validation.pk %}">
+                                    Réservé
+                                </a>
+                            {% elif validation.is_pending_valid %}
+                                <a href="{% url "zds.article.views.reservation" validation.pk %}">
+                                    Se retirer
+                                </a>
+                            {% elif validation.is_accept %}
+                                <span>Accepté</span>
+                            {% elif validation.is_reject %}
+                                <span>Rejeté</span>
+                            {% endif %}
+                        </td>
+                    </tr>
                 {% endfor %}
             </tbody>
         </table>
-        {% else %}
-        <p>Aucun tutoriel soumis en validation.</p>
-        {% endif %}
-    </div>
-</div>
+    {% else %}
+        <p>
+            Aucun tutoriel soumis en validation.
+        </p>
+    {% endif %}
 {% endblock %}
