Ajout des CGU en pied de page

--- a/templates/base.html
+++ b/templates/base.html
@@ -377,6 +377,7 @@
         </div>
         <div class="large-6 columns">
           <ul class="inline-list right">
+            <li><a href="{% url "zds.pages.views.eula" %}">CGU</a></li>
             <li><a href="{% url "zds.pages.views.about" %}">À propos</a></li>
             <li><a href="{% url "zds.pages.views.association" %}">L'association</a></li>
             <li><a href="{% url "zds.pages.views.contact" %}">Contact</a></li>
