--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -14,29 +14,24 @@
 
 {% block content %}
 
-<div class="row">
+<div class="row">	
+    <div class="large-12 columns">
+  		<p>Si vous vous intéressez à tous ça, vous devriez songer à <a href="https://github.com/Taluu/ZesteDeSavoir">contribuer au développement du site</a> !</p>
+    </div>
     <div class="large-4 columns">
-        <h3>Crédits</h3>
-        <p>
-            Certaines icônes sont basées sur le pack d'icônes
-            <a href="http://glyphicons.com/">Glyphicons</a> mis à disposition
-            sous licence CC-BY.
-        </p>
-        <p>
-            <a href="http://microjoe.deviantart.com/art/Progdupeupl-s-logo-403348624">Le logo de Progdupeupl</a>
-            est de MicroJoe et est disponible sous licence CC-BY-NC-SA.
-        </p>
+        <h3>Copyrights</h3>
+        <p>Zeste de Savoir est un logiciel libre distribué sous licence <a href="http://www.gnu.org/licenses/gpl-3.0.html>GPL v3</a>, et provient en parti de <a href="http://progdupeu.pl">Progdupeupl</a>.</p>
+        <p><a href="#">Le logo de Zeste de Savoir</a> est de MaxRoyo et est disponible sous licence [TODO]</p>
+        <p>Les tutoriels et les articles sont la propriété de leurs auteurs.</p>
+        <p>Certaines icônes sont basées sur le pack d'icônes <a href="http://glyphicons.com/">Glyphicons</a> mis à disposition sous licence CC-BY 3.0 unported.</p>
     </div>
     <div class="large-4 columns">
         <h3>Système</h3>
-        <p>
-            Voici les différents logiciels actifs sur ce serveur pour faire
-            tourner Progdupeupl dans les meilleures conditions :
-        </p>
+        <p>Le serveur de Zeste de Savoir tourne avec ces techologies :</p>
         <p><strong>Site</strong></p>
         <ul>
-            <li><a href="http://www.python.org/">CPython {{ python_version }}</a></li>
-            <li><a href="https://www.djangoproject.com/">Django {{ django_version }}</a></li>
+            <li><a href="http://www.python.org/">CPython 2.7</a></li>
+            <li><a href="https://www.djangoproject.com/">Django 1.6</a></li>
         </ul>
         <p><strong>HTTP(S) + WSGI</strong></p>
         <ul>
@@ -50,10 +45,7 @@
     </div>
     <div class="large-4 columns">
         <h3>Technologies</h3>
-        <p>
-            Voici la liste des différentes technologies utilisées par Progdupeupl
-            autres que les technologies serveur :
-        </p>
+        <p>Le site de Zeste de Savoir utilise ces technologies pour un meilleur affichage :</p>
         <p><strong>Feuilles de style</strong></p>
         <ul>
             <li><a href="http://compass-style.org/">Compass</a></li>
